<resources>
    <string name="app_name">&appName;</string>
    <string name="google_map_api" translatable="false">AIzaSyAsVN1AHgbMr2n3SYtNZxFiT7e1bz3tP5s</string>
    <string name="facebook_app_id" translatable="false">886005385069764</string>
    <string name="fb_login_protocol_scheme">fb886005385069764</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">54b479158e41fb96757a1da2b61e7a00</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="whats_your_mail_address">What\'s your email address?</string>
    <string name="sample_mail_id" translatable="false">name@examplecom</string>
    <string name="welcome_back">Welcome back, sign in to continue </string>
    <string name="enter_your_password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="country_number">Country</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="i_forgot_my_password">Forgot password?</string>
    <string name="i_need_to_create_an_account">I need to create an account</string>
    <string name="account_already_text">Don\'t have an account already?</string>
    <string name="apply">APPLY</string>
    <string name="welcome_to">Welcome to</string>
    <string name="time_awaits_you">Time Awaits You!</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="birthday">Date of birth</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_no" translatable="false">9876543210</string>
    <string name="password_txt" translatable="false">******</string>
    <string name="sign_verify">Sign Verify</string>
    <string name="email_verify">Email Verfiy Code</string>
    <string name="phone_verfity">Phone Verify Code</string>
    <string name="verify">Verify</string>
    <string name="email_or_phone_verify_required">Input verify code of email or phone</string>
    <string name="email_validation_error">E_VALIDATION_ERROR</string>
    <string name="alert_re_signup">Do you want to resignup?</string>
    <string name="re_signup">SignUp</string>
    <string name="cancel">Cancel</string>
    <string name="reset_pwd_dialog">Your password has reseted successfully. Please login with your new password.</string>
    <string name="recover_password">Enter your mail ID for recovery</string>
    <string name="enter_the_coupon">Enter coupon code</string>
    <string name="add_coupon">ADD COUPON</string>
    <string name="add_coupon_code">Add Coupon code</string>
    <string name="exit_confirm">Are you sure you want to logout?</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="fresh">W e l c o m e</string>
    <string name="search">S c h e d u l e</string>
    <string name="bookmark">D r i v e r s</string>
    <string name="introducing">Introducing</string>
    <string name="fresh_description">CoOper aims to pioneer a sharing economy in The Bahamas. This involves on-demand peer-to-peer services,within a network of ride-sharing.</string>
    <string name="search_description">Use CoOper to get to your destination of choice or to explore the attractions,events and other venues in The Bahamas. Available on demand or upon scheduled
    request. On time every time.</string>
    <string name="bookmark_description">Our screened and trained drivers are qualified and friendly and they will make sure you get to your destination on time, in style and in a good mood! </string>
    <string name="edit_profile">Edit Account</string>
    <string name="change_password">Looking to change password?</string>
    <string name="save">SAVE</string>
    <string name="update_success">Profile Updated</string>
    <string name="where_to_go">Where would you like to go?</string>
    <string name="extend_trip">Extend Trip?</string>
    <string name="selected_option">Economy</string>
    <string name="selected_payment_mode">Cash</string>
    <string name="wallet_payment">Wallet payment</string>
    <string name="cash_payment">Cash payments in USD/BSD</string>
    <string name="select_service">Select Service</string>
    <string name="change">Change</string>
    <string name="request_xuber">CONFIRM COOL</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="current_location">Current Location</string>
    <string name="explore_attractions_near_you">Explore Attractions Near You</string>
    <string name="promotions">Promotions</string>
    <string name="add_promo_gift_code">Add Promo/Gift Code</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="schedule">Schedule a &Service;</string>
    <string name="change_date">Change</string>
    <string name="sample_date">Choose a date</string>
    <string name="sample_time">Choose a time</string>
    <string name="next">Schedule Request</string>
    <string name="different_time">You can\'t schedule in past timings, please choose different time</string>
    <string name="choose_date_time">Please choose date and time for schedule</string>
    <string name="upcoming_trips">Upcoming</string>
    <string name="past_trips">Past</string>
    <string name="service_list_item" translatable="false">Jaguar</string>
    <string name="no_service">Service not available at this location.</string>
    <string name="no_route">There is no route, choose different destination</string>
    <string name="choose_payment">Choose payment method</string>
    <string name="approximate">Estimated Fare</string>
    <string name="eta_time">ETA</string>
    <string name="sample_rate" translatable="false">$1234</string>
    <string name="include_all">Including all other charges</string>
    <string name="confirm_your_pickup">Confirm your Pickup</string>
    <string name="confirm">Confirm Pickup</string>
    <string name="close">Close</string>
    <string name="sample_address">110, StJoseph Chruch, Richards, road Newyork</string>
    <string name="done">Done</string>
    <string name="looking_for_ride">Finding &Service;....</string>
    <string name="cancel_ride">Cancel &service;</string>
    <string name="share">Share</string>
    <string name="cancel_ride_alert">Are you sure want to cancel the &service;?</string>
    <string name="no_providers_found">No one found at the moment to take your &service;, Please try after sometime</string>
    <string name="no_drivers_found">No drivers available to take your trip</string>
    <string name="driver_busy">Your &Service; was cancelled by the &Provider;.Please contact us for support</string>
    <string name="retry">Retry Now</string>
    <string name="try_later">Later</string>
    <string name="sample_name">Will Smith</string>
    <string name="sample_service">BMW</string>
    <string name="call_btn">Call</string>
    <string name="chat_btn">Chat</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="surge_pricing">Due to peak hours, charges will be vary based on availability of providers</string>
    <string name="pickup_drop">Please enter both pickup and drop locations</string>
    <string name="payment">Payment</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="payment_methods_past">Payment Method</string>
    <string name="add_payments">Add Card for payments</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="card_details">Card Details</string>
    <string name="card_number">Credit/Debit Card Number</string>
    <string name="sample_card_no" translatable="false">XXXX - XXXX - XXXX - XXXX</string>
    <string name="month_and_year" translatable="false">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="add">Add My Card</string>
    <string name="enter_card_details">Card details not valid</string>
    <string name="are_you_sure">Are you sure want to remove?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arrived">&Provider; has arrived at your location</string>
    <string name="picked_up">you are on &service;</string>
    <string name="dropped">&Service; has completed</string>
    <string name="history">History</string>
    <string name="comments">Comments</string>
    <string name="no_trips">You have no past trips</string>
    <string name="no_upcoming_trips">You have no upcoming trips</string>
    <string name="your_trips">Your Trips</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="trip_detail">Trip Detail</string>
    <string name="invoice">Invoice</string>
    <string name="base_price">Base fare</string>
    <string name="booking_id">Booking ID</string>
    <string name="sample_base_price" translatable="false">0</string>
    <string name="sample_distance" translatable="false">1 KM</string>
    <string name="sample_time_travel" translatable="false">1 hr</string>
    <string name="extra_price">Extra</string>
    <string name="tax">Tax</string>
    <string name="wallet_detection">Wallet Detection</string>
    <string name="discount_detection">Discount Applied</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay Now</string>
    <string name="distance_price">Distance fare</string>
    <string name="sub_total">Subtotal</string>
    <string name="sub_total2">Subtotal2</string>
    <string name="vat">VAT</string>
    <string name="rate_provider">Rate your trip with</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="submit">Submit</string>
    <string name="source_location">Your location</string>
    <string name="destination_location">Where to?</string>
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="change_pwd_dialog">Your password has updated successfully. Please login with your new password.</string>
    <string name="cencel_request">Are you sure you want to cancel the &service;?</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="server_connect_error">Server connect error</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection</string>
    <string name="oops_connect_your_internet">Oops! Connect your Internet</string>
    <string name="server_down">Unable to reach server</string>
    <string name="please_try_again">Please try again</string>
    <string name="please_wait">Please wait...</string>
    <string name="email_validation">Enter your email ID</string>
    <string name="not_valid_email">Not a valid email ID</string>
    <string name="password_validation">Password could not be left empty</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="time_taken">Time Taken</string>
    <string name="help">Help</string>
    <string name="book_name">Booking ID</string>
    <string name="passbook">Passbook</string>
    <string name="settings">Settings</string>
    <string name="make_money_driving">Make money driving</string>
    <string name="food_and_coffee_delivery">Food &amp; Coffee Delivery - Coming Soon</string>
    <string name="free_rides">Free Rides</string>
    <string name="action_wallet">Wallet</string>
    <string name="action_explore">Explore</string>
    <string name="action_logout">Logout</string>
</resources>